[package]
name = "yew-concepts"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.92"
serde = "1.0.204"
gloo = "0.11.0"

[dependencies.web-sys]
version = "0.3.69"
# Add more web-sys API's as you need them
features = [
  "console",
  "Element",
  "HtmlElement",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
]
